# IngameListMod

./: CMakeLists.txt  README.md  about.md  build.bat  config.bat  logo.pdn  mod.json
.github/workflows/: multi-platform.yml  release.yml
Project/: CMakeLists.txt  Project.cpp  Project.h
includes/: json.h
libs/curl/lib/: libcurl_a.lib
libs/json/: json.hpp
src/: BrownAlertDelegate.cpp  BrownAlertDelegate.h  DLStatsViewer.cpp  DLStatsViewer.h  LeaderboardLayer.cpp  LeaderboardsLayer.h  LevelInfoLayer.cpp  LevelInfoLayer.h  PlayLayer.cpp  PlayLayer.h  dllmain.cpp  include.h  main.cpp  pch.h
